zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__floating_layout_with_plugins_and_commands_swaped_properly.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
assertion_line: 7510
expression: snapshot
---
00 (C): ┌ zellij:status-bar ────────────────────────────── PIN [ ] ┐ab-bar ───────────────────────────────── PIN [ ] ┐──────────┐
01 (C): │I am a                                                    │b bar                                            │          │
02 (C): │status bar                                                │                                                 │          │
03 (C): │                                                          │                                                 │          │
04 (C): │                                                          │                                                 │          │
05 (C): │                                                          │                                                 │          │
06 (C): │                                                          │                                                 │          │
07 (C): │                                                          │                                                 │          │
08 (C): │                                                          │                                                 │          │
09 (C): └──────────────────────────────────────────────────────────┘─────────────────────────────────────────────────┘          │
10 (C): ┌ command1 ───────────────────│                   ┌ command2 ─────────────────────────────────────── PIN [ ] ┐          │
11 (C): │                             │                   │                                                          │          │
12 (C): │                             │                   │                                                          │          │
13 (C): │                             │                   │                                                          │          │
14 (C): │                Waiting to ru└───────────────────│                Waiting to run: command2                  │          │
15 (C): │                                                 │                                                          │          │
16 (C): │     <ENTER> 运行，<ESC> 返回到 shell，<Ctrl-c> 退│     <ENTER> 运行，<ESC> 返回到 shell，<Ctrl-c> 退出      │          │
17 (C): │                                                 │                                                          │          │
18 (C): │                                                 │                                                          │          │
19 (C): └─────────────────────────────────────────────────└──────────────────────────────────────────────────────────┘──────────┘

