zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__layout_with_plugins_and_commands_swaped_properly.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
assertion_line: 6564
expression: snapshot
---
00 (C): I am a                                                                                                                   
01 (C): status bar                                                                                                               
02 (C): ┌ command2 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
03 (C): │                                                                                                                       │
04 (C): │                                              Waiting to run: command2                                                 │
05 (C): │                                                                                                                       │
06 (C): │                                   <ENTER> 运行，<ESC> 返回到 shell，<Ctrl-c> 退出                                     │
07 (C): └───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
08 (C): ┌ command1 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
09 (C): │                                                                                                                       │
10 (C): │                                              Waiting to run: command1                                                 │
11 (C): │                                                                                                                       │
12 (C): │                                   <ENTER> 运行，<ESC> 返回到 shell，<Ctrl-c> 退出                                     │
13 (C): └─ <ENTER> 运行，<ESC> 返回到 shell，<Ctrl-c> 退出 ─────────────────────────────────────────────────────────────────────┘
14 (C): ┌ Pane #2 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
15 (C): │                                                                                                                       │
16 (C): │                                                                                                                       │
17 (C): │                                                                                                                       │
18 (C): └───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
19 (C): I am a tab bar                                                                                                           

